--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ chardet==3.0.4
 idna==2.7
 idna-ssl==1.1.0
 multidict==4.4.2
-requests==2.19.1
-telepot==12.7
-urllib3==1.23
+requests
+telepot
+urllib3
 websockets==3.4
 yarl==1.2.6
 gunicorn
